Apple App Store Link
added apple app store link

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         </p>
 
         <a href="https://play.google.com/store/apps/details?id=com.TroglodyteGames.BreakoutRogue&hl=en_US"><br/><br/>Play it on the Google Play Store!<br/><br/><br/></a>
+        <a href="https://apps.apple.com/us/app/brick-ball-rogue/id6743149880?platform=iphone"><br/><br/>Play it on the Apple App Store!<br/><br/><br/></a>
     </div>
     <script src="index.js"></script>
   </body>
