--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Troglodyte Games</h1>
         <div>
-            <a href = "mailto:thefetusden@gmail.com">thefetusden@gmail.com</a>
+            <a href = "mailto:troglodytegamesstudio@gmail.com">troglodytegamesstudio@gmail.com</a>
         </div>
     </header>
     <div class="description">
