--- a/index.html
+++ b/index.html
@@ -123,6 +123,41 @@
         <a href="https://play.google.com/store/apps/details?id=com.TroglodyteGames.BreakoutRogue&hl=en_US"><br/><br/>Play it on the Google Play Store!<br/><br/><br/></a>
         <a href="https://apps.apple.com/us/app/brick-ball-rogue/id6743149880?platform=iphone"><br/><br/>Play it on the Apple App Store!<br/><br/><br/></a>
     </div>
+    <hr>
+    <div class="listing">
+        <h2>
+            Synergy Tower Defense
+        </h2>
+        <div class = "gallery-wrap">
+            <img src="Images/back.png" class="btn" id="tdBackBtn">
+            <div class = "gallery" id="tdGallery">
+                <div>
+                    <span><img src="Images/BrickBall1.png"></span>
+                    <span><img src="Images/BrickBall2.png"></span>
+                    <span><img src="Images/BrickBall3.png"></span>
+                    <span><img src="Images/BrickBall4.png"></span>
+                    <span><img src="Images/BrickBall5.png"></span>
+                    <span><img src="Images/BrickBall6.png"></span>
+                </div>
+                <div>
+                    <span><img src="Images/BrickBall7.png"></span>
+                    <span><img src="Images/BrickBall8.png"></span>
+                    <span><img src="Images/BrickBall9.png"></span>
+                    <span><img src="Images/BrickBall10.png"></span>
+                    <span><img src="Images/BrickBall11.png"></span>
+                    <span><img src="Images/BrickBall12.png"></span>
+                </div>
+            </div>
+            <img src="Images/forward.png" class="btn" id="tdForwardBtn">
+        </div>
+        
+        <p>
+            Collect towers randomly dealt from a list of 100+ towers that have a unique combination of passives and effects. Upgrade them to your liking, and manage your money to destroy the oncoming waves!
+        </p>
+        <p>coming soon</p>
+<!--         <a href="https://play.google.com/store/apps/details?id=com.TroglodyteGames.BreakoutRogue&hl=en_US"><br/><br/>Play it on the Google Play Store!<br/><br/><br/></a>
+        <a href="https://apps.apple.com/us/app/brick-ball-rogue/id6743149880?platform=iphone"><br/><br/>Play it on the Apple App Store!<br/><br/><br/></a> -->
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
