--- a/index.html
+++ b/index.html
@@ -132,21 +132,25 @@
             <img src="Images/back.png" class="btn" id="tdBackBtn">
             <div class = "gallery" id="tdGallery">
                 <div>
-                    <span><img src="Images/BrickBall1.png"></span>
-                    <span><img src="Images/BrickBall2.png"></span>
-                    <span><img src="Images/BrickBall3.png"></span>
-                    <span><img src="Images/BrickBall4.png"></span>
-                    <span><img src="Images/BrickBall5.png"></span>
-                    <span><img src="Images/BrickBall6.png"></span>
+                    <span><img src="Images/TD!.png"></span>
+                    <span><img src="Images/TD2.png"></span>
+                    <span><img src="Images/TD3.png"></span>
                 </div>
                 <div>
-                    <span><img src="Images/BrickBall7.png"></span>
-                    <span><img src="Images/BrickBall8.png"></span>
-                    <span><img src="Images/BrickBall9.png"></span>
+                    <span><img src="Images/TD4.png"></span>
+                    <span><img src="Images/TD5.png"></span>
+                    <span><img src="Images/TD6.png"></span>
+                </div>
+                <div>
+                    <span><img src="Images/TD7.png"></span>
+                    <span><img src="Images/TD8.png"></span>
+                    <span><img src="Images/TD9.png"></span>
+                  </div>
+<!--                   <div>
                     <span><img src="Images/BrickBall10.png"></span>
                     <span><img src="Images/BrickBall11.png"></span>
                     <span><img src="Images/BrickBall12.png"></span>
-                </div>
+                </div> -->
             </div>
             <img src="Images/forward.png" class="btn" id="tdForwardBtn">
         </div>
@@ -154,7 +158,8 @@
         <p>
             Collect towers randomly dealt from a list of 100+ towers that have a unique combination of passives and effects. Upgrade them to your liking, and manage your money to destroy the oncoming waves!
         </p>
-        <p>coming soon</p>
+      
+        <a>coming soon</a>
 <!--         <a href="https://play.google.com/store/apps/details?id=com.TroglodyteGames.BreakoutRogue&hl=en_US"><br/><br/>Play it on the Google Play Store!<br/><br/><br/></a>
         <a href="https://apps.apple.com/us/app/brick-ball-rogue/id6743149880?platform=iphone"><br/><br/>Play it on the Apple App Store!<br/><br/><br/></a> -->
     </div>
