--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
             <img src="Images/back.png" class="btn" id="brickBackBtn">
             <div class = "gallery" id="brickGallery">
                 <div>
-                    <span><img src="Images/BrickBall1.png"></span>
-                    <span><img src="Images/BrickBall2.png"></span>
-                    <span><img src="Images/BrickBall3.png"></span>
-                    <span><img src="Images/BrickBall4.png"></span>
-                    <span><img src="Images/BrickBall5.png"></span>
-                    <span><img src="Images/BrickBall6.png"></span>
+                    <span><img src="Images/bb1.png"></span>
+                    <span><img src="Images/bb2.png"></span>
+                    <span><img src="Images/bb3.png"></span>
+                    <span><img src="Images/bb4.png"></span>
+                    <span><img src="Images/bb5.png"></span>
+                    <span><img src="Images/bb6.png"></span>
                 </div>
                 <div>
-                    <span><img src="Images/BrickBall7.png"></span>
-                    <span><img src="Images/BrickBall8.png"></span>
-                    <span><img src="Images/BrickBall9.png"></span>
-                    <span><img src="Images/BrickBall10.png"></span>
-                    <span><img src="Images/BrickBall11.png"></span>
+                    <span><img src="Images/bb7.png"></span>
+                    <span><img src="Images/bb8.png"></span>
+                    <span><img src="Images/bb9.png"></span>
+                    <span><img src="Images/bb10.png"></span>
+                    <span><img src="Images/BrickBall9png"></span>
                     <span><img src="Images/BrickBall12.png"></span>
                 </div>
             </div>
