--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             Brick Ball: Rogue is an arcade classic with a roguelite twist. Break bricks and gather the best combination of perks to defeat levels of increasing difficulty! Easy to run, light on ads, fun to play! Can you make it to the final level?
         </p>
 
-        <a href="https://play.google.com/store/apps/details?id=com.TroglodyteGames.BreakoutRogue&hl=en_US"><br/><br/>Play it on the Google Play Store!<br/></a>
-        <a href="https://apps.apple.com/us/app/brick-ball-rogue/id6743149880?platform=iphone"><br/><br/>Play it on the Apple App Store!<br/><br/><br/></a>
+        <a href="https://play.google.com/store/apps/details?id=com.TroglodyteGames.BreakoutRogue&hl=en_US"><br/><br/>Play it on Android!<br/></a>
+        <a href="https://apps.apple.com/us/app/brick-ball-rogue/id6743149880?platform=iphone"><br/><br/>Play it on IOS!<br/><br/><br/></a>
     </div>
     <hr>
     <div class="listing">
@@ -159,8 +159,8 @@
             Collect towers randomly dealt from a list of 100+ towers that have a unique combination of passives and effects. Upgrade them to your liking, and manage your money to destroy the oncoming waves!
         </p>
       <br/><br/>
-        <a>coming soon</a>
-        <a href="https://apps.apple.com/us/app/synergy-tower-defense/id6744049061?platform=iphone"><br/><br/>Play it on the Apple App Store!<br/><br/><br/></a>
+        <a href="https://play.google.com/store/apps/details?id=com.TroglodyteGames.SynergyTowerDefense&hl=en_US"><br/><br/>Play it on Android!<br/></a>
+        <a href="https://apps.apple.com/us/app/synergy-tower-defense/id6744049061?platform=iphone"><br/><br/>Play it on IOS!<br/><br/><br/></a>
       <br/><br/>
 <!--         <a href="https://play.google.com/store/apps/details?id=com.TroglodyteGames.BreakoutRogue&hl=en_US"><br/><br/>Play it on the Google Play Store!<br/><br/><br/></a>
         <a href="https://apps.apple.com/us/app/brick-ball-rogue/id6743149880?platform=iphone"><br/><br/>Play it on the Apple App Store!<br/><br/><br/></a> -->
